# ch59x-hal

./: .gitignore  Cargo.toml  README.md  build.rs  link.x  memory.x
.cargo/: config.toml
examples/: blinky.rs  flash.rs
src/: isp.rs  lcd.rs  lib.rs  prelude.rs  rcc.rs  rt.rs  rtc.rs  serial.rs  signature.rs  sysctl.rs
