[package]
name = "ch59x-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ch59x = { version = "0.1.8", features = ["ch59x", "rt"] }
ch59x = { path = "../ch32-rs-nightlies/ch59x", version = "0.1.7", features = [
    "ch59x",
    #"rt",
] }
fugit = "0.3.7"
fugit-timer = "0.1.3"

nb = "1.1.0"
riscv = "0.10.1"

embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-alpha = { version = "=1.0.0-alpha.11", package = "embedded-hal" }
# qingke = "0.1.1"
qingke = { path = "../qingke" }

[dev-dependencies]
panic-halt = "0.2.0"
# riscv-rt = "0.11.0"
